--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -20,6 +20,538 @@ img {
   height: 100px;
 }
 
+.signUp-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  height: 100vh;
+}
+
+@media screen and (max-height: 723px) {
+  .signUp-container {
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .signUp-container {
+    width: 100vw;
+  }
+}
+
+.signUp-center-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+}
+
+.signUp-main-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  width: 700px;
+}
+
+@media screen and (max-width: 700px) {
+  .signUp-main-div {
+    width: 100vw;
+  }
+}
+
+.signUp-page-logo-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  width: 85%;
+  height: 146px;
+  padding: 10px;
+  background-color: #20b2aa;
+}
+
+.pinch-logo {
+  width: 70%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.signup-credentials-div {
+  margin-top: 20px;
+  width: 85%;
+  padding: 30px;
+  background-color: #d1e0de;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.signup-credentials-div .signup-title {
+  font-size: 30px;
+  color: #5d5d5d;
+}
+
+.signup-credentials-div .signUp-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  width: 100%;
+  position: relative;
+  margin-top: 70px;
+}
+
+@media screen and (max-height: 1000px) {
+  .signup-credentials-div .signUp-form {
+    margin-top: 10px;
+  }
+}
+
+.signup-credentials-div .signUp-input-title {
+  font-size: 20px;
+  width: 75%;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  color: #5d5d5d;
+}
+
+.signup-credentials-div .signUp-input {
+  width: 75%;
+  height: 45px;
+  padding-left: 10px;
+  margin-bottom: 18px;
+  border: none;
+  font-size: 20px;
+}
+
+.signup-credentials-div .signUp-input::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  position: relative;
+  font-size: 20px;
+  font-style: italic;
+  color: #9c9c9c;
+  font-weight: lighter;
+}
+
+.signup-credentials-div .signUp-input::-moz-placeholder {
+  /* Firefox 19+ */
+  position: relative;
+  font-size: 20px;
+  font-style: italic;
+  font-weight: lighter;
+  color: #9c9c9c;
+}
+
+.signup-credentials-div .signUp-input:-ms-input-placeholder {
+  /* IE 10+ */
+  position: relative;
+  font-size: 20px;
+  font-style: italic;
+  font-weight: lighter;
+  color: #9c9c9c;
+}
+
+.signup-credentials-div .signUp-input:-moz-placeholder {
+  /* Firefox 18- */
+  position: relative;
+  font-size: 20px;
+  font-style: italic;
+  color: #9c9c9c;
+  font-weight: lighter;
+}
+
+.signup-credentials-div .remember-me {
+  width: 75%;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin-bottom: 18px;
+  color: #5d5d5d;
+}
+
+.signup-credentials-div .remember-me-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+}
+
+.signup-credentials-div .remember-me-chk {
+  margin-right: 8px;
+  width: 22px;
+  height: 22px;
+}
+
+.signup-credentials-div .signin-signup-btn {
+  width: 75%;
+  padding: 12px;
+  font-size: 25px;
+  font-weight: lighter;
+  background-color: #20b2aa;
+  color: white;
+  border: none;
+  margin-bottom: 5px;
+  cursor: pointer;
+  -webkit-transition: 0.1s ease-in;
+  transition: 0.1s ease-in;
+}
+
+.signup-credentials-div .signin-signup-btn:hover {
+  background-color: #1c9993;
+}
+
+.signup-credentials-div .agreement {
+  width: 60%;
+  font-size: 12px;
+  margin-bottom: 18px;
+  text-align: center;
+  color: #5d5d5d;
+  font-style: italic;
+}
+
+.signup-credentials-div .have-account {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  width: 70%;
+  font-size: 25px;
+  color: #5f5f5f;
+  margin-top: 15px;
+}
+
+.signup-credentials-div .have-account :nth-child(2) {
+  text-decoration: underline;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+.rights-text-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  width: 100%;
+  position: relative;
+  bottom: 0;
+  margin-bottom: 20px;
+}
+
+.rights-text {
+  font-size: 13px;
+  text-align: center;
+  color: #5d5d5d;
+}
+
+.react-tel-input {
+  width: 75%;
+}
+
+.react-tel-input .form-control {
+  width: 100%;
+  height: 45px;
+  padding-left: 10px;
+  margin-bottom: 18px;
+  border: none;
+  font-size: 20px;
+  outline: none;
+  color: #5d5d5d;
+  -webkit-transition: border-color ease .25s, -webkit-box-shadow ease .25s;
+  transition: border-color ease .25s, -webkit-box-shadow ease .25s;
+  transition: box-shadow ease .25s, border-color ease .25s;
+  transition: box-shadow ease .25s, border-color ease .25s, -webkit-box-shadow ease .25s;
+}
+
+.react-tel-input .form-control:hover {
+  border-color: #000;
+}
+
+.react-tel-input .form-control:focus {
+  border-color: #1976d2;
+  -webkit-box-shadow: 0 0 0 1px #1976d2;
+          box-shadow: 0 0 0 1px #1976d2;
+}
+
+.react-tel-input .form-control:focus + div:before {
+  color: #1976d2;
+}
+
+.react-tel-input .form-control.invalid-number {
+  border: 1px solid #f44336;
+}
+
+.react-tel-input .form-control.invalid-number:focus {
+  -webkit-box-shadow: 0 0 0 1px #f44336;
+          box-shadow: 0 0 0 1px #f44336;
+}
+
+.react-tel-input .form-control.invalid-number + div:before {
+  content: 'Error';
+  display: none;
+  color: #f44336;
+  width: 27px;
+}
+
+.react-tel-input .flag-dropdown {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  padding: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.react-tel-input .flag-dropdown:hover, .react-tel-input .flag-dropdown:focus {
+  cursor: pointer;
+}
+
+.react-tel-input .flag-dropdown.open {
+  z-index: 2;
+}
+
+.react-tel-input input[disabled] + .flag-dropdown:hover {
+  cursor: default;
+  border-color: #CACACA;
+}
+
+.react-tel-input input[disabled] + .flag-dropdown:hover .selected-flag {
+  background-color: transparent;
+}
+
+.react-tel-input .selected-flag {
+  outline: none;
+  position: relative;
+  width: 52px;
+  height: 110px;
+  padding: 0 0 0 11px;
+  margin-top: 110%;
+  border-radius: 3px 0 0 3px;
+}
+
+.react-tel-input .selected-flag:focus .arrow {
+  border-left-width: 4px;
+  border-right-width: 4px;
+  border-top: 5px solid #1976d2;
+}
+
+.react-tel-input .selected-flag .flag {
+  display: none;
+}
+
+.react-tel-input .selected-flag .arrow {
+  position: relative;
+  top: 50%;
+  margin-top: -1px;
+  left: 29px;
+  width: 0;
+  height: 0;
+  border-left: 3px solid transparent;
+  border-right: 3px solid transparent;
+  border-top: 4px solid #555;
+}
+
+.react-tel-input .selected-flag .arrow.up {
+  border-top: none;
+  border-bottom: 4px solid #555;
+}
+
+.react-tel-input .country-list {
+  outline: none;
+  z-index: 1;
+  list-style: none;
+  position: absolute;
+  padding: 0;
+  margin: 0px 0 10px -1px;
+  -webkit-box-shadow: 1px 2px 18px rgba(0, 0, 0, 0.25);
+          box-shadow: 1px 2px 18px rgba(0, 0, 0, 0.25);
+  background-color: white;
+  width: 770%;
+  max-height: 220px;
+  overflow-y: scroll;
+  border-radius: 7px;
+}
+
+.react-tel-input .country-list .flag {
+  display: none;
+}
+
+.react-tel-input .country-list .divider {
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  border-bottom: 1px solid #ccc;
+}
+
+.react-tel-input .country-list .country {
+  position: relative;
+  padding: 12px 9px 13px 46px;
+}
+
+.react-tel-input .country-list .country .dial-code {
+  color: #6b6b6b;
+}
+
+.react-tel-input .country-list .country:hover {
+  background-color: #f1f1f1;
+}
+
+.react-tel-input .country-list .country.highlight {
+  background-color: #f1f1f1;
+}
+
+.react-tel-input .country-list .flag {
+  margin-right: 7px;
+  margin-top: 2px;
+}
+
+.react-tel-input .country-list .country-name {
+  margin-right: 6px;
+}
+
+.react-tel-input .country-list .search {
+  z-index: 2;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: #fff;
+  padding: 10px 0 6px 10px;
+}
+
+.react-tel-input .country-list .search-emoji {
+  display: none;
+  font-size: 15px;
+}
+
+.react-tel-input .country-list .search-box {
+  border: 1px solid #cacaca;
+  border-radius: 3px;
+  font-size: 15px;
+  line-height: 15px;
+  margin-left: 6px;
+  padding: 3px 8px 5px;
+  outline: none;
+}
+
+.react-tel-input .country-list .search-box:hover {
+  border-color: #505050;
+}
+
+.react-tel-input .country-list .no-entries-message {
+  padding: 7px 10px 11px;
+  opacity: .7;
+}
+
+.react-tel-input .invalid-number-message {
+  position: absolute;
+  z-index: 1;
+  font-size: 13px;
+  left: 25px;
+  top: -7px;
+  background: #fff;
+  padding: 0 5px;
+  color: #de0000;
+}
+
+.react-tel-input .special-label {
+  display: none;
+}
+
 .login-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -334,7 +866,7 @@ img {
 }
 
 .rights-text {
-  font-size: 15px;
+  font-size: 13px;
   text-align: center;
   color: #5d5d5d;
 }
