--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -1,4 +1,5 @@
 @import "../01.Homepage/Homepage.scss";
+@import "../02.Signup/Signup.scss";
 @import "../03.Login/Login.scss";
 @import "../SharedComponents/01.Header/Header.scss";
 
