--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -570,19 +570,34 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  align-items: center;
   width: 100%;
   height: 100vh;
+  background-color: white;
 }
 
-@media screen and (max-height: 723px) {
+@media screen and (max-width: 600px) {
   .login-container {
-    height: 100%;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    background-color: #d1e0de;
   }
 }
 
 @media screen and (max-width: 450px) {
   .login-container {
     width: 100vw;
+  }
+}
+
+.empty-div {
+  display: block;
+}
+
+@media screen and (max-width: 600px) {
+  .empty-div {
+    display: none;
   }
 }
 
@@ -648,6 +663,12 @@ img {
   background-color: #20b2aa;
 }
 
+@media screen and (max-width: 600px) {
+  .login-page-logo-div {
+    width: 100%;
+  }
+}
+
 .pinch-logo {
   width: 70%;
   height: 100%;
@@ -670,6 +691,25 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media screen and (max-height: 723px) {
+  .credentials-div {
+    margin-top: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .credentials-div {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .credentials-div {
+    padding: 30px 0 30px 0;
+  }
 }
 
 .credentials-div .credentials-title {
@@ -712,6 +752,12 @@ img {
   color: #5d5d5d;
 }
 
+@media screen and (max-width: 600px) {
+  .credentials-div .login-input-title {
+    width: 90%;
+  }
+}
+
 .credentials-div .login-input {
   width: 75%;
   height: 45px;
@@ -719,6 +765,12 @@ img {
   margin-bottom: 18px;
   border: none;
   font-size: 20px;
+}
+
+@media screen and (max-width: 600px) {
+  .credentials-div .login-input {
+    width: 90%;
+  }
 }
 
 .credentials-div .login-input::-webkit-input-placeholder {
@@ -766,6 +818,12 @@ img {
   color: #5d5d5d;
 }
 
+@media screen and (max-width: 600px) {
+  .credentials-div .remember-me {
+    width: 90%;
+  }
+}
+
 .credentials-div .remember-me-label {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -805,6 +863,14 @@ img {
   transition: 0.1s ease-in;
 }
 
+@media screen and (max-width: 600px) {
+  .credentials-div .sign-in-btn {
+    -webkit-transition: none;
+    transition: none;
+    width: 90%;
+  }
+}
+
 .credentials-div .sign-in-btn:hover {
   background-color: #1c9993;
 }
@@ -816,6 +882,12 @@ img {
   text-align: center;
   color: #5d5d5d;
   font-style: italic;
+}
+
+@media screen and (max-width: 600px) {
+  .credentials-div .agreement {
+    width: 80%;
+  }
 }
 
 .credentials-div .no-account {
@@ -836,10 +908,16 @@ img {
   width: 70%;
   font-size: 25px;
   color: #5f5f5f;
+  text-align: center;
 }
 
-.credentials-div .no-account :nth-child(2) {
-  text-decoration: underline;
+@media screen and (max-width: 600px) {
+  .credentials-div .no-account {
+    width: 90%;
+  }
+}
+
+.credentials-div .signup-link {
   margin-left: 5px;
   cursor: pointer;
 }
@@ -865,6 +943,14 @@ img {
   margin-bottom: 20px;
 }
 
+@media screen and (max-width: 600px) {
+  .rights-text-div {
+    width: 90%;
+    padding-top: 30px;
+    border-top: 0.5px solid white;
+  }
+}
+
 .rights-text {
   font-size: 13px;
   text-align: center;
@@ -879,7 +965,5 @@ body,
 html {
   padding: 0;
   margin: 0;
-  overflow-y: hidden;
-  overflow-x: hidden;
 }
 /*# sourceMappingURL=global.css.map */
