--- a/public/assets/Styles/03.Login/Login.scss
+++ b/public/assets/Styles/03.Login/Login.scss
@@ -11,15 +11,25 @@ $phone: 450px;
 .login-container {
   @include flexCenter(column);
   justify-content: space-between;
+  align-items: center;
   width: 100%;
   height: 100vh;
-  @media screen and (max-height: 723px) {
-    height: 100%;
+  background-color: white;
+  @media screen and (max-width: 600px) {
+    justify-content: flex-start;
+    background-color: #d1e0de;
   }
   @media screen and (max-width: $phone) {
     width: 100vw;
   }
   // border: 1px solid red;
+}
+
+.empty-div {
+  display: block;
+  @media screen and (max-width: 600px) {
+    display: none;
+  }
 }
 
 .login-center-div {
@@ -42,6 +52,9 @@ $phone: 450px;
   padding: 10px;
   background-color: #20b2aa;
   // border: 1px solid red;
+  @media screen and (max-width: 600px) {
+    width: 100%;
+  }
 }
 
 .pinch-logo {
@@ -60,6 +73,16 @@ $phone: 450px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  @media screen and (max-height: 723px) {
+    margin-top: 0;
+  }
+  @media screen and (max-width: 600px) {
+    width: 100%;
+    margin-top: 0;
+  }
+  @media screen and (max-width: 600px) {
+    padding: 30px 0 30px 0;
+  }
   .credentials-title {
     font-size: 40px;
     color: #5d5d5d;
@@ -78,6 +101,9 @@ $phone: 450px;
     width: 75%;
     justify-content: flex-start;
     color: #5d5d5d;
+    @media screen and (max-width: 600px) {
+      width: 90%;
+    }
   }
   .login-input {
     width: 75%;
@@ -86,6 +112,9 @@ $phone: 450px;
     margin-bottom: 18px;
     border: none;
     font-size: 20px;
+    @media screen and (max-width: 600px) {
+      width: 90%;
+    }
     &::-webkit-input-placeholder {
       /* Chrome/Opera/Safari */
       position: relative;
@@ -124,6 +153,9 @@ $phone: 450px;
     justify-content: flex-start;
     margin-bottom: 18px;
     color: #5d5d5d;
+    @media screen and (max-width: 600px) {
+      width: 90%;
+    }
   }
   .remember-me-label {
     // margin-bottom: 0;
@@ -145,6 +177,10 @@ $phone: 450px;
     margin-bottom: 5px;
     cursor: pointer;
     transition: 0.1s ease-in;
+    @media screen and (max-width: 600px) {
+      transition: none;
+      width: 90%;
+    }
     &:hover {
       background-color: #1c9993;
     }
@@ -156,17 +192,23 @@ $phone: 450px;
     text-align: center;
     color: #5d5d5d;
     font-style: italic;
+    @media screen and (max-width: 600px) {
+      width: 80%;
+    }
   }
   .no-account {
     @include flexCenter(row);
     width: 70%;
     font-size: 25px;
     color: rgb(95, 95, 95);
-    :nth-child(2) {
-      text-decoration: underline;
-      margin-left: 5px;
-      cursor: pointer;
+    text-align: center;
+    @media screen and (max-width: 600px) {
+      width: 90%;
     }
+  }
+  .signup-link {
+    margin-left: 5px;
+    cursor: pointer;
   }
 }
 
@@ -177,6 +219,12 @@ $phone: 450px;
   position: relative;
   bottom: 0;
   margin-bottom: 20px;
+  @media screen and (max-width: 600px) {
+    // margin-top: 30px;
+    width: 90%;
+    padding-top: 30px;
+    border-top: 0.5px solid rgb(255, 255, 255);
+  }
 }
 
 .rights-text {
